Rutas para devolver datos del usuario

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongoose": "^6.0.5",
+    "mongoose-pagination": "^1.0.0",
     "morgan": "^1.10.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.2.1"
