--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -28,6 +28,9 @@
     "outDir": "./dist/",                                   /* Specify an output folder for all emitted files. */
     "rootDir": "./src/",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
+   /*"paths": {
+      "*": ["./node_modules/*", "./src/services/*"]
+    },*/
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
